--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/components/yield-filter-pane/template/yield-filter-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/components/yield-filter-pane/template/yield-filter-pane.html
@@ -20,6 +20,7 @@
 		<yield-color-filter-item
 			*ngFor="let yieldColorFilterItemVM of yieldColorFilterCollection.filterVMList" 
 			[yieldColorFilterItemVM] = "yieldColorFilterItemVM" 
+			(onSelect)="colorItemSelected($event)"
 			>
 		</yield-color-filter-item>
 	</div>
