[T257] - Yield filters implementation

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/components/yield-filter-pane/components/yield-color-filter-item/template/yield-color-filter-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/components/yield-filter-pane/components/yield-color-filter-item/template/yield-color-filter-item.html
@@ -1,4 +1,4 @@
-<div class="flex-row" [ngClass] = "{'selected' : selected }" (click)="toggleSelection()">
+<div class="yield-filter-item flex-row" [ngClass] = "{'selected' : selected }" (click)="toggleSelection()">
 	<div class="left {{yieldColorFilterItemVM.cssClass}}">
 	</div>
 	<div class="right p-6" [ngClass]="getRightClasses()">
