--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
@@ -1,43 +1,65 @@
-<div class="invoice-payer-container">
+<div class="invoice-payer-container m-t-6 m-b-6">
     <table class="table table-invoice-payer">
         <tbody>
             <tr class="row-actions">
-                <td width="50%" class="customer-container">
-                    <a class="clickable-item" (click)="goToCustomer(invoicePayerVM.customerDO)"><i class="fa fa-2x unitpal-font">(</i> <b>{{invoicePayerVM.customerDO.customerName}}</b></a>
-                    <a class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Change' | translate }}</a>
+                <td width="70%" class="customer-container">
+                    <a *ngIf="invoicePayerVM.customerDO" class="clickable-item" (click)="goToCustomer(invoicePayerVM.customerDO)"><i class="fa fa-2x unitpal-font">(</i> <b>{{invoicePayerVM.customerDO.customerName}}</b></a>
+                    <a *ngIf="invoicePayerVM.customerDO" class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Change' | translate }}</a>
+                    <a *ngIf="!invoicePayerVM.customerDO" class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Select Customer' | translate }}</a>
                 </td>
-                <td width="50%" class="print-container"><a class="clickable-item">{{ 'Print & Send' | translate }} <i class="fa fa-print" aria-hidden="true"></i></a></td>
+                <td width="30%" class="print-container"><a class="clickable-item">{{ 'Print & Send' | translate }} <i class="fa fa-print" aria-hidden="true"></i></a></td>
             </tr>
         </tbody>
     </table>
-    <table class="table table-invoice-payer">
-        <tbody>
-            <tr class="row-payment">
-                <td width="30%"></td>
-                <td width="20%" class="amount-paid-container">
-                    <div class="input-group">
-                        <span class="input-group-addon"><span>{{invoicePayerVM.ccy.symbol}}</span></span>
-                        <input class="form-control" type="number" [(ngModel)]="invoicePayerVM.invoicePayerDO.priceToPay">
-                    </div>
-                </td>
-                <td width="15%" class="amount-paid-container">
-                    <span>{{ 'of' | translate }} <b>{{invoicePayerVM.ccy.symbol}} {{invoicePayerVM.totalAmount}}</b></span>
-                </td>
-                <td width="30%" class="payment-method-container">
-                    <div class="input-group">
-                        <select class="form-control">
+
+    <div class="payment-container" [ngClass]="{'read-only p-12' : !editMode, 'p-6': editMode}">
+        <form class="form-inline">
+
+            <div *ngIf="editMode" class="form-group m-0">
+                <div class="input-group">
+                    <span class="input-group-addon"><span>{{ccySymbol}}</span></span>
+                    <input class="form-control" type="number" [(ngModel)]="invoicePayerVM.invoicePayerDO.priceToPay">
+                </div>
+            </div>
+
+            <div *ngIf="!editMode" class="form-group m-0">
+                <div class="input-group">
+                    <span><b>{{ccySymbol}} {{invoicePayerVM.invoicePayerDO.priceToPay}}</b></span>
+                </div>
+            </div>
+
+            <div class="form-group m-t-0 m-r-12 m-b-0 m-l-0">
+                <div class="input-group">
+                    <span>{{ 'of' | translate }} <b>{{ccySymbol}} {{totalAmount}}</b></span>
+                </div>
+            </div>
+
+            <div *ngIf="editMode" class="form-group m-0">
+                <div class="input-group">
+                    <select class="form-control">
                         <option value="0: Object">Cash</option>
                         <option value="1: Object">Visa</option>
-                        <option value="2: Object">American Express</option>
-                        <option value="3: Object">Euro/Mastercard</option>
-                        <option value="4: Object">Diners Club</option>
-                        <option value="5: Object">JCB</option>
-                        <option value="6: Object">Maestro</option>
-                        <option value="7: Object">Discover</option>
                     </select>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+                </div>
+            </div>
+
+            <div *ngIf="!editMode" class="form-group m-0">
+                <div class="input-group">
+                    <i class="fa fa-lg fa-cc-discover"></i>
+                    <span> Discover</span>
+                </div>
+            </div>
+            
+            <div *ngIf="editMode && isNewlyAdded" class="form-group m-0">
+                <div class="input-group">
+                    <span>
+                        <a class="btn btn-xs" title="{{ 'Delete' | translate}}" (click)="onDelete()"><i class="fa unitpal-font">\</i></a>
+                    </span>
+                </div>
+            </div>
+
+
+
+        </form>
+    </div>
 </div>
