invoice navigation control: fix on invoice deletion

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -8,8 +8,8 @@
 	</div>
 	<div class="invoice-operations-footer">
 
-		<item-list-navigator (displayedItemsUpdated)="displayedItemsUpdated($event)" [totalNumberOfItems]="totalNumberOfInvoices" [maxNumberOfDisplayedItems]="invoiceNavigatorWindowSize"
-			[numberOfSimultaneouslySelectedItems]="numberOfSimultaneouslyDisplayedInvoices" [totalNumberOfinvoicesChangedObservable]="totalNumberOfinvoicesChangedObservable">
+		<item-list-navigator (displayedItemsUpdated)="displayedItemsUpdated($event)" [initialNumberOfItems]="totalNumberOfInvoices" [maxNumberOfDisplayedItems]="invoiceNavigatorWindowSize"
+			[numberOfSimultaneouslySelectedItems]="numberOfSimultaneouslyDisplayedInvoices" [itemsAdded]="itemsAddedObservable" [itemRemoved]="itemRemovedObservable">
 		</item-list-navigator>
 
 		<div *ngIf="editMode" class="invoice-operations-btn-group">
