--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/template/yield-manager-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/template/yield-manager-dashboard.html
@@ -2,8 +2,8 @@
 	<div class="yield-manager-dashboard operations-dashboard">
 		<yield-filter-pane [yieldManager]="self" class="pane full-height"></yield-filter-pane>
 		<div class="main flex-column">
-			<yield-key-metrics [yieldManager]="self"></yield-key-metrics>
-			<yield-price-products [yieldManager]="self"></yield-price-products>
+			<yield-key-metrics customScroll [yieldManager]="self"></yield-key-metrics>
+			<yield-price-products customScroll [yieldManager]="self"></yield-price-products>
 		</div>
 	</div>
 </div>
