[T257] Integrated key metric modal in KeyMetricsComponent

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-key-metrics/template/yield-key-metrics.html
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 	<div class="key-metrics-row flex-row" *ngFor="let metric of metricsResults.currentItemVM.metricVMList">
-		<div class="key-metrics-col flex-jc-start wide" >
+		<div class="key-metrics-col flex-jc-start wide" (click)="openKeyMetricModal(metric)">
 			<span>
 				<span class="unitpal-font dark-gray-color f-12">{{metric.meta.fontName}}</span> 
 				<span class="dark-gray-color f-12" title="{{ metric.meta.displayName }}">{{ metric.meta.displayName }}</span>
